[tool.poetry]
name = "repl_nix_KingHunt"
version = "0.1.0"
description = ""
authors = ["ES-11GM-713326 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
alien-invasion1 = "^1.0.0"
move = "^0.1.3"
actions = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
